# Depwatch

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
sbom_risk/: __init__.py  analyzer.py  cli.py  dashboard.py  discovery.py  models.py  osv.py  parsers.py  registry_cache.py  reporting.py  sbom.py
sbom_risk/data/: __init__.py  vulnerabilities.json
tests/: conftest.py  test_analyzer.py  test_dashboard_server.py  test_dashboard_ui.py  test_license_policy.py  test_path_limits.py  test_registry_cache.py  test_reliability.py  test_reporting.py  test_scoring.py  test_transitive.py
